Added blogs, initial placeholder

--- a/hugo.toml
+++ b/hugo.toml
@@ -21,24 +21,45 @@ title = "Yu Xuan's Portfolio"
     buttonText = "Inquire about Mentorship"
     inquiryLink = "mailto:yuxuanlow013@gmail.com?subject=Mentorship%20Inquiry"
 
+[permalinks]
+  blog = "/blog/:contentbasename/"
+
+[taxonomies]
+    tag = "tags"
+    category = "categories"
+
+[markup.highlight]
+codeFences = true
+guessSyntax = false
+hl_Lines = ""
+lineNoStart = 1
+lineNos = false
+lineNumbersInTable = true
+noClasses = true
+tabWidth = 2
+
 [menu]
   [[menu.main]]
     name = "About"
-    url = "#about"
+    url = "/#about"
     weight = 10
-#  [[menu.main]]
-#    name = "Skills"
-#    url = "#skills"
-#    weight = 20
+  [[menu.main]]
+    name = "Education"
+    url = "/#education"
+    weight = 20
   [[menu.main]]
     name = "Projects"
-    url = "#projects"
+    url = "/#projects"
     weight = 30
   [[menu.main]]
     name = "Achievements"
-    url = "#achievements"
+    url = "/#achievements"
     weight = 40
   [[menu.main]]
-    name = "Contact"
-    url = "#contact"
+    name = "Blog"
+    url = "/#blog"
     weight = 50
+  [[menu.main]]
+    name = "Contact"
+    url = "/#contact"
+    weight = 60
