Added math blog

--- a/hugo.toml
+++ b/hugo.toml
@@ -49,6 +49,8 @@ style = "onedark"
         [markup.goldmark.extensions.passthrough.delimiters]
           block = [['\[', '\]'], ['$$', '$$']]
           inline = [['\(', '\)']]
+    [markup.goldmark.renderer]
+      unsafe = true
 
 [menu]
   [[menu.main]]
