--- a/hugo.toml
+++ b/hugo.toml
@@ -72,8 +72,13 @@ style = "onedark"
     weight = 40
   [[menu.main]]
     name = "Blog"
-    url = "/#blog"
-    weight = 50
+    url = "/blog"
+    weight = 3
+
+[[menu.main]]
+    name = "Kuih Classifier"
+    url = "/kuih-classifier"
+    weight = 4
   [[menu.main]]
     name = "Contact"
     url = "/#contact"
