--- a/data/hero.toml
+++ b/data/hero.toml
@@ -1,4 +1,4 @@
 headline = "Yu Xuan Low"
-description = "Competitive programmer and software developer specializing in algorithms, data structures, and backend development."
+description = "Backend Developer and Machine Learning Engineer"
 achievement = "Specialist at Codeforces"
 cvLink = "/CV_Low_Yu_Xuan.pdf"
