--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
+  "type": "module",
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.5",
     "@tailwindcss/typography": "^0.5.16",
     "tailwindcss": "^4.1.5"
+  },
+  "scripts": {
+    "linkpro": "node fetchpreview.js"
+  },
+  "dependencies": {
+    "cheerio": "^1.1.2",
+    "chokidar": "^4.0.3",
+    "glob": "^11.0.3",
+    "js-yaml": "^4.1.0",
+    "node-fetch": "^2.7.0"
   }
 }
