--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  provider: ^6.1.5+1
+  equatable: ^2.0.7
+  go_router: ^17.0.0
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
+  cloud_functions: ^6.0.4
+  firebase_analytics: ^12.0.4
+  firebase_crashlytics: ^5.0.5
+  get_it: ^9.1.0
+  injectable: ^2.6.0
+  freezed: ^3.2.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  cached_network_image: ^3.4.1
+  video_player: ^2.10.1
+  fl_chart: ^1.1.1
+  flutter_local_notifications: ^19.5.0
+  just_audio: ^0.10.5
+  freezed_annotation: ^3.1.0
+  injectable_generator: ^2.9.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +68,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.10.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
